# adforge

./: .env.example  .gitignore  .replit  ADFORGE_INTENT.md  DEMO_SCRIPT.md  EVALUATION.md  FRONTEND_IMPROVEMENT_PROMPT.md  LEARNINGS.md  README.md  create_sample_assets.py  justfile  pyproject.toml  replit.md  requirements.txt  tmp6_mv23_5.yaml  tmpmdgxobbk.yaml  tmpz7u1y13t.yaml
.streamlit/: config.toml
attached_assets/: Pasted-You-are-an-expert-UI-UX-designer-and-Streamlit-develope_1775602866809.txt
sample_briefs/: beach_house_campaign.yaml  holiday_campaign.yaml  summer_campaign.yaml
sample_output/coastal_collection_2025/: report.html  report.json
src/: __main__.py  analytics.py  analyzer.py  app.py  cli.py  compositor.py  generator.py  models.py  pipeline.py  providers.py  report.py  storage.py  templates.py  tracker.py  utils.py  validator.py
tests/: test_analytics.py  test_analyzer.py  test_brand_colors.py  test_compositor.py  test_generator.py  test_image_discovery.py  test_models.py  test_pipeline.py  test_providers.py  test_sidebar_nav.py  test_storage.py  test_templates.py  test_tracker.py  test_validator.py
