[project]
name = "adforge"
version = "1.0.0"
description = "Creative automation pipeline for localized social campaigns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.30.0",
    "Pillow>=10.3.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
adforge = "src.cli:cli"
